Reports/rs.vul.ksrce.ac.in.2024-09-27.txt
Fierce Subdomains Bruter - Brute Forces Subdomain Discovery.
------------------------

NS: ns2.dns-parking.com. ns1.dns-parking.com.
SOA: ns1.dns-parking.com. (162.159.24.201)
Zone: failure
Wildcard: failure
Found: cms.ksrce.ac.in. (217.21.81.89)
Found: ftp.ksrce.ac.in. (217.21.81.89)
Found: new.ksrce.ac.in. (217.21.81.89)


DMitry - Passively Harvests Subdomains from the Domain.
------------------------

Deepmagic Information Gathering Tool
"There be some deep magic going on"

HostIP:147.79.69.15
HostName:ksrce.ac.in

Gathered Subdomain information for ksrce.ac.in
---------------------------------
Searching Google.com:80...
HostName:www.ksrce.ac.in
HostIP:93.127.173.226
Searching Altavista.com:80...
Found 1 possible subdomain(s) for host ksrce.ac.in, Searched 0 pages containing 0 results

All scans completed, exiting


WHOis - Checks for Administrator's Contact Information.
------------------------

Domain Name: ksrce.ac.in
Registry Domain ID: D2047904-IN
Registrar WHOIS Server:
Registrar URL: http://www.ernet.in
Updated Date: 2024-06-05T09:52:04Z
Creation Date: 2005-04-21T09:52:04Z
Registry Expiry Date: 2025-04-21T09:52:04Z
Registrar: ERNET India
Registrar IANA ID: 800068
Registrar Abuse Contact Email:
Registrar Abuse Contact Phone:
Domain Status: ok http://www.icann.org/epp#OK
Registry Registrant ID: REDACTED FOR PRIVACY
Registrant Name: REDACTED FOR PRIVACY
Registrant Organization: K.S.R.College of Engineering
Registrant Street: REDACTED FOR PRIVACY
Registrant Street: REDACTED FOR PRIVACY
Registrant Street: REDACTED FOR PRIVACY
Registrant City: REDACTED FOR PRIVACY
Registrant State/Province: Tamil Nadu
Registrant Postal Code: REDACTED FOR PRIVACY
Registrant Country: IN
Registrant Phone: REDACTED FOR PRIVACY
Registrant Phone Ext: REDACTED FOR PRIVACY
Registrant Fax: REDACTED FOR PRIVACY
Registrant Fax Ext: REDACTED FOR PRIVACY
Registrant Email: Please contact the Registrar listed above
Registry Admin ID: REDACTED FOR PRIVACY
Admin Name: REDACTED FOR PRIVACY
Admin Organization: REDACTED FOR PRIVACY
Admin Street: REDACTED FOR PRIVACY
Admin Street: REDACTED FOR PRIVACY
Admin Street: REDACTED FOR PRIVACY
Admin City: REDACTED FOR PRIVACY
Admin State/Province: REDACTED FOR PRIVACY
Admin Postal Code: REDACTED FOR PRIVACY
Admin Country: REDACTED FOR PRIVACY
Admin Phone: REDACTED FOR PRIVACY
Admin Phone Ext: REDACTED FOR PRIVACY
Admin Fax: REDACTED FOR PRIVACY
Admin Fax Ext: REDACTED FOR PRIVACY
Admin Email: Please contact the Registrar listed above
Registry Tech ID: REDACTED FOR PRIVACY
Tech Name: REDACTED FOR PRIVACY
Tech Organization: REDACTED FOR PRIVACY
Tech Street: REDACTED FOR PRIVACY
Tech Street: REDACTED FOR PRIVACY
Tech Street: REDACTED FOR PRIVACY
Tech City: REDACTED FOR PRIVACY
Tech State/Province: REDACTED FOR PRIVACY
Tech Postal Code: REDACTED FOR PRIVACY
Tech Country: REDACTED FOR PRIVACY
Tech Phone: REDACTED FOR PRIVACY
Tech Phone Ext: REDACTED FOR PRIVACY
Tech Fax: REDACTED FOR PRIVACY
Tech Fax Ext: REDACTED FOR PRIVACY
Tech Email: Please contact the Registrar listed above
Name Server: ns1.dns-parking.com
Name Server: ns2.dns-parking.com
DNSSEC: unsigned
URL of the ICANN Whois Inaccuracy Complaint Form: https://www.icann.org/wicf/
>>> Last update of WHOIS database: 2024-09-27T06:29:57Z <<<

For more information on Whois status codes, please visit https://icann.org/epp

Access to .IN WHOIS information is provided to assist persons in determining the contents of a domain name registration record in the .IN registry database. The data in this record is provided by .IN Registry for informational purposes only ,and .IN does not guarantee its accuracy.  This service is intended only for query-based access. You agree that you will use this data only for lawful purposes and that, under no circumstances will you use this data to (a) allow, enable, or otherwise support the transmission by e-mail, telephone, or facsimile of mass unsolicited, commercial advertising or solicitations to entities other than the data recipient's own existing customers; or (b) enable high volume, automated, electronic processes that send queries or data to the systems of Registry Operator or a Registrar, or NIXI except as reasonably necessary to register domain names or modify existing registrations. All rights reserved. .IN reserves the right to modify these terms at any time. By submitting this query, you agree to abide by this policy.


SSLyze - Checks for Secure Renegotiation Support and Client Renegotiation.
------------------------


 CHECKING CONNECTIVITY TO SERVER(S)
 ----------------------------------

   ksrce.ac.in:443           => 147.79.69.113 


 SCAN RESULTS FOR KSRCE.AC.IN:443 - 147.79.69.113
 ------------------------------------------------

 * Session Renegotiation:
       Client Renegotiation DoS Attack:   OK - Not vulnerable
       Secure Renegotiation:              OK - Supported

 SCANS COMPLETED IN 1.373451 S
 -----------------------------

 COMPLIANCE AGAINST MOZILLA TLS CONFIGURATION
 --------------------------------------------

    Disabled; use --mozilla_config={old, intermediate, modern}.



Wafw00f - Checks for Application Firewalls.
------------------------


                [1;97m______
               [1;97m/      \
              [1;97m(  W00f! )
               [1;97m\  ____/
               [1;97m,,    [1;92m__            [1;93m404 Hack Not Found
           [1;96m|`-.__   [1;92m/ /                     [1;91m __     __
           [1;96m/"  _/  [1;92m/_/                       [1;91m\ \   / /
          [1;94m*===*    [1;92m/                          [1;91m\ \_/ /  [1;93m405 Not Allowed
         [1;96m/     )__//                           [1;91m\   /
    [1;96m/|  /     /---`                        [1;93m403 Forbidden
    [1;96m\\/`   \ |                                 [1;91m/ _ \
    [1;96m`\    /_\\_              [1;93m502 Bad Gateway  [1;91m/ / \ \  [1;93m500 Internal Error
      [1;96m`_____``-`                             [1;91m/_/   \_\

                        [1;96m~ WAFW00F : [1;94mv2.2.0 ~[1;97m
        The Web Application Firewall Fingerprinting Toolkit
    [0m
[*] Checking https://ksrce.ac.in
[+] Generic Detection results:
[-] No WAF detected by the generic detection
[~] Number of requests: 7


XSSer - Checks for Cross-Site Scripting [XSS] Attacks.
------------------------

===========================================================================

XSSer v1.8[4]: "The HiV€!" - (https://xsser.03c8.net) - 2010/2021 -> by psy

===========================================================================
Testing [Full XSS audit]... ;-)
===========================================================================

[Info] The following actions will be performed at the end:

  1- Output with detailed statistics

  2- Export results to files: 

     - a) XSSreport.raw 
     - b) XSSer_<target>_<datetime>.xml

-------------------------

[Info] REQUEST: Cross Site Tracing (XST) Vulnerability...


[Error] WARNING: Some internal errors getting -targets-


[Error] Not any valid source provided to start a test... Aborting!

===========================================================================
Traceback (most recent call last):
  File "/usr/share/xsser/xsser", line 35, in <module>
    app.run()
  File "/usr/share/xsser/core/main.py", line 3050, in run
    self.print_results()
  File "/usr/share/xsser/core/main.py", line 3240, in print_results
    fout = open("XSSreport.raw", "w") # write better than append
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
PermissionError: [Errno 13] Permission denied: 'XSSreport.raw'


